--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,6 @@
       "dest": "dist/main.ts",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
