--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
     "@nestjs/swagger": "^8.0.1",
+    "class-validator": "^0.14.1",
+    "dayjs": "^1.11.13",
+    "helmet": "^4.6.0",
+    "reflect-metadata": "^0.2.0",
+    "request-ip": "^3.3.0",
+    "rxjs": "^7.8.1",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
