--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.11",
     "helmet": "^4.6.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
     "reflect-metadata": "^0.2.0",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
